--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="slade smith : thoughts" />
+    <meta name="description" content="slade smith : sic infit" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <!--<a id="forkme_banner" href="https://github.com/SladeSmith">View on GitHub</a>-->
+          <a id="forkme_banner" href="https://github.com/SladeSmith">View on GitHub</a>
 
           <h1 id="project_title">slade smith</h1>
-          <h2 id="project_tagline">thoughts</h2>
+          <h2 id="project_tagline">sic infit</h2>
 
         </header>
     </div>
